test/expect/errors/err.expected
File "err.ml", line 1, characters 9-19:
Error: Cannot derive anything for this type
